--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 103.115.35.10 -p 3002",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 103.115.35.10 -p 3002",
     "lint": "next lint"
   },
   "dependencies": {
